syntax = "proto3";
package ubii.proto.dataStructure;

message Vector8 {
    double v0 = 1;
    double v1 = 2;
    double v2 = 3;
    double v3 = 4;
    double v4 = 5;
    double v5 = 6;
    double v6 = 7;
    double v7 = 8;
}