syntax = "proto3";
package ubii.proto.topicData;

import "ubii/proto/topicData/timestamp.proto";
import "ubii/proto/dataStructure/lists.proto";
import "ubii/proto/dataStructure/vector2.proto";
import "ubii/proto/dataStructure/vector3.proto";
import "ubii/proto/dataStructure/vector4.proto";
import "ubii/proto/dataStructure/quaternion.proto";
import "ubii/proto/dataStructure/matrix3x2.proto";
import "ubii/proto/dataStructure/matrix4x4.proto";
import "ubii/proto/dataStructure/color.proto";
import "ubii/proto/dataStructure/touchEvent.proto";
import "ubii/proto/dataStructure/keyEvent.proto";
import "ubii/proto/dataStructure/mouseEvent.proto";
import "ubii/proto/dataStructure/myoEvent.proto";
import "ubii/proto/dataStructure/pose2d.proto";
import "ubii/proto/dataStructure/pose3d.proto";
import "ubii/proto/dataStructure/object2d.proto";
import "ubii/proto/dataStructure/object3d.proto";
import "ubii/proto/dataStructure/image.proto";

import "ubii/proto/sessions/session.proto";
import "ubii/proto/processing/processingModule.proto";

message TopicDataRecord {
    string topic = 1;
    ubii.proto.topicData.Timestamp timestamp = 2;
    oneof type {
        double double = 3;
        bool bool = 4;
        string string = 5;
        ubii.proto.dataStructure.Vector2 vector2 = 6;
        ubii.proto.dataStructure.Vector3 vector3 = 7;
        ubii.proto.dataStructure.Vector4 vector4 = 8;
        ubii.proto.dataStructure.Quaternion quaternion = 9;
        ubii.proto.dataStructure.Matrix3x2 matrix3x2 = 10;
        ubii.proto.dataStructure.Matrix4x4 matrix4x4 = 11;
        ubii.proto.dataStructure.Color color = 12;
        ubii.proto.dataStructure.TouchEvent touch_event = 13;
        ubii.proto.dataStructure.TouchEventList touch_event_list = 34;
        ubii.proto.dataStructure.KeyEvent key_event = 14;
        ubii.proto.dataStructure.MouseEvent mouse_event = 15;
        ubii.proto.dataStructure.MyoEvent myo_event = 16;
        ubii.proto.dataStructure.Pose2D pose2D = 17;
        ubii.proto.dataStructure.Pose3D pose3D = 18;
        ubii.proto.dataStructure.Object2D object2D = 19;
        ubii.proto.dataStructure.Object3D object3D = 20;
        ubii.proto.dataStructure.Object2DList object2D_list = 21;
        ubii.proto.dataStructure.Object3DList object3D_list = 22;
        int32 int32 = 23;
        float float = 24;
        ubii.proto.dataStructure.Int32List int32_list = 25;
        ubii.proto.dataStructure.FloatList float_list = 26;
        ubii.proto.dataStructure.DoubleList double_list = 27;
        ubii.proto.dataStructure.StringList string_list = 28;
        ubii.proto.dataStructure.BoolList bool_list = 29;
        ubii.proto.dataStructure.Image2D image2D = 30;
        ubii.proto.dataStructure.Image2DList image2D_list = 31;
        ubii.proto.sessions.Session session = 32;
        ubii.proto.processing.ProcessingModuleList processing_module_list = 33;
    }    
}

message TopicDataRecordList {
    repeated ubii.proto.topicData.TopicDataRecord elements = 1;
}