syntax = "proto3";
package ubii.proto_baseline.services;

import "ubii/proto_baseline/general/success.proto";
import "ubii/proto_baseline/general/error.proto";
import "ubii/proto_baseline/dataStructure/lists.proto";
import "ubii/proto_baseline/clients/client.proto";
import "ubii/proto_baseline/devices/component.proto";
import "ubii/proto_baseline/devices/device.proto";
import "ubii/proto_baseline/devices/topicMux.proto";
import "ubii/proto_baseline/devices/topicDemux.proto";
import "ubii/proto_baseline/servers/server.proto";
import "ubii/proto_baseline/sessions/session.proto";
import "ubii/proto_baseline/services/service.proto";
import "ubii/proto_baseline/processing/processingModule.proto";
import "ubii/proto_baseline/processing/lockstepProcessing.proto";

message ServiceReply {
    oneof type {
        ubii.proto_baseline.general.Success success = 1;
        ubii.proto_baseline.general.Error error = 2;
        ubii.proto_baseline.clients.Client client = 3;
        ubii.proto_baseline.devices.Device device = 4;
        ubii.proto_baseline.servers.Server server = 5;
        ubii.proto_baseline.sessions.Session session = 6;
        ubii.proto_baseline.sessions.SessionList session_list = 7;
        ubii.proto_baseline.processing.ProcessingModule processing_module = 8;
        ubii.proto_baseline.processing.ProcessingModuleList processing_module_list = 9;
        ubii.proto_baseline.dataStructure.StringList string_list = 10;
        ubii.proto_baseline.devices.TopicMux topic_mux = 11;
        ubii.proto_baseline.devices.TopicMuxList topic_mux_list = 12;
        ubii.proto_baseline.devices.TopicDemux topic_demux = 13;
        ubii.proto_baseline.devices.TopicDemuxList topic_demux_list = 14;
        ubii.proto_baseline.clients.ClientList client_list = 15;
        ubii.proto_baseline.devices.DeviceList device_list = 16;
        ubii.proto_baseline.services.Service service = 17;
        ubii.proto_baseline.services.ServiceList service_list = 18;
        ubii.proto_baseline.processing.LockstepProcessingReply lockstep_processing_reply = 19;
        ubii.proto_baseline.devices.Component component = 20;
        ubii.proto_baseline.devices.ComponentList component_list = 21;
    }
}